# Multus-CLI

./: .gitignore  Cargo.toml  README.md  main.py  ocr_app.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: install.ps1  install.sh  test-install-ui.ps1  test-install-ui.sh  uninstall.ps1  uninstall.sh
src/: cli.rs  main.rs  types.rs  update.rs
src/commands/: common.rs  compress.rs  convert_image.rs  encrypt.rs  images_to_pdf.rs  merge.rs  mod.rs  reorder.rs  split.rs  uninstall.rs  update.rs  watermark.rs
src/core/: image.rs  mod.rs  page.rs  path.rs
src/core/pdf/: compress.rs  encrypt.rs  images_to_pdf.rs  merge.rs  mod.rs  reorder.rs  split.rs  watermark.rs
src/ui/: banner.rs  menu.rs  mod.rs  prompt.rs  spinner.rs
src/updater/: install.rs  mod.rs  shell.rs  uninstall.rs  version.rs
tests/: conftest.py  test_pages.py
web/: app.js  index.html  style.css
