[package]
name = "pdf-tools"
version = "0.1.0"
edition = "2021"
description = "Multus PDF toolkit"

[[bin]]
name = "multus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "bmp", "gif", "tiff"] }
lopdf = { version = "0.40", features = ["embed_image"] }
zip = "0.6"
