[package]
name = "multus"
version = "0.1.2"
edition = "2024"
description = "Multus toolkit"

[[bin]]
name = "multus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "bmp", "gif", "tiff"] }
lopdf = { version = "0.40", features = ["embed_image"] }
ureq = { version = "2.10", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
