[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-splitter"
version = "0.1.0"
description = "PDF range splitter CLI + OCR drag and drop UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pypdf",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "pillow",
  "pytesseract",
  "pymupdf",
]

[project.scripts]
pdf = "main:main"
pdf-ocr-ui = "ocr_app:run"

[tool.setuptools]
py-modules = ["main", "ocr_app"]

[tool.setuptools.data-files]
"web" = ["web/index.html", "web/style.css", "web/app.js"]
